--- a/html-css/week1/index.html
+++ b/html-css/week1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Presentation</title>
     <link rel="stylesheet" href="style.css">
     <!-- adding google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" 
@@ -22,7 +22,7 @@
              </p>
         </div> 
         <div class="box-1">
-            <img src="../profilepic.jpg" alt="Profile Image">
+            <img src="profilepic.jpg" alt="Profile Image">
          </div> 
     </header>
 
