made some chnages bcz the next page was not loading

--- a/html-css/week3/index.html
+++ b/html-css/week3/index.html
@@ -39,7 +39,7 @@
             </section>
 
             <section class="formarea">
-                <form action="step2.html" method="#">
+                <form action="step2.html" method="GET">
                     <div class="form-labels">
                         <label for="firstname">First name*</label>
                         <input type="text" id="firstname" name="firstname" required>
