--- a/html-css/week3/step3.html
+++ b/html-css/week3/step3.html
@@ -108,7 +108,7 @@
                     </div>
                     
 
-                    <button type="submit" class="submit-btn"><a href="#">Next Step</a></button>
+                    <button type="submit" class="submit-btn">Next Step</button>
                     
                 </form>
             </section>
