links were not working so had to make changes with subimt button

--- a/html-css/week3/index.html
+++ b/html-css/week3/index.html
@@ -39,7 +39,7 @@
             </section>
 
             <section class="formarea">
-                <form action="step2.html" method="GET">
+                <form action="#" method="GET">
                     <div class="form-labels">
                         <label for="firstname">First name*</label>
                         <input type="text" id="firstname" name="firstname" required>
@@ -601,7 +601,7 @@
                         </div>    
                     </div>
 
-                        <button type="submit" class="submit-btn">Next Step</button>
+                        <button type="submit" class="submit-btn"><a href="step2.html">Next Step</a></button>
                     
                 </form>
             </section>
