--- a/html-css/week3/step2.html
+++ b/html-css/week3/step2.html
@@ -31,7 +31,7 @@
             </section>
 
             <section class="formarea">
-                <form action="step3.html" method="GET">
+                <form action="#" method="GET">
                     <div class="form-labels">
                         <label for="email">Email*</label>
                         <input type="email" name="email" id="email" required>
@@ -60,7 +60,7 @@
                         <input type="radio" name="letter" id="no-news" value="0">
                     </div>
 
-                    <button type="submit" class="submit-btn">Next Step</button>
+                    <button type="submit" class="submit-btn"><a href="step3.html">Next Step</a></button>
                     
                 </form>
             </section>
