--- a/html-css/week3/step3.html
+++ b/html-css/week3/step3.html
@@ -30,7 +30,7 @@
             </section>
 
             <section class="formarea">
-                <form action="step4.html" method="GET">
+                <form action="#" method="GET">
                     <p>What kind of items are you interested in offers on?</p>
                     <div class="interests">
                             <label for="apparal">Apparal</label>
@@ -108,7 +108,7 @@
                     </div>
                     
 
-                    <button type="submit" class="submit-btn">Next Step</button>
+                    <button type="submit" class="submit-btn"><a href="step4.html">Next Step</a></button>
                     
                 </form>
             </section>
